--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,4 @@ bcs = "0.1.2"
 hex = "0.4"
 env_logger = "0.7"
 futures = "0.3"
-iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "feat/get-peers" }
+iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
