--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
+bee-rest-api = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2" }
 log = "0.4"
 warp = "0.3"
 structopt = "0.3"
@@ -18,4 +20,3 @@ bcs = "0.1.2"
 hex = "0.4"
 env_logger = "0.7"
 futures = "0.3"
-iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
