--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ structopt = "0.3"
 thiserror = "1.0"
 url = "2.1"
 serde = { version = "1.0", features = ["derive"] }
-tokio = { version = "1.0", features = ["macros"] }
+tokio = { version = "1.0", features = ["macros", "signal"] }
 bcs = "0.1.2"
 hex = "0.4"
 env_logger = "0.7"
