--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
 bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
 bee-rest-api = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2" }
 bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2" }
+blake2 = "0.9"
+digest = "0.9"
 log = "0.4"
 warp = "0.3"
 structopt = "0.3"
