--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ structopt = "0.3"
 thiserror = "1.0"
 url = "2.1"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tokio = { version = "1.0", features = ["macros", "signal"] }
 bcs = "0.1.2"
 hex = "0.4"
