--- a/.github/workflows/rosetta_cli_data_construction.yml
+++ b/.github/workflows/rosetta_cli_data_construction.yml
@@ -14,7 +14,6 @@ jobs:
       - name: install deps
         run: |
           sudo apt-get install sed jq psmisc
-          curl -sSfL https://raw.githubusercontent.com/coinbase/rosetta-cli/master/scripts/install.sh | sh -s
 
       - name: run rosetta_cli.sh
-        run: DATA=1 CONSTRUCTION=1 PRUNE=1 ./rosetta_cli.sh
+        run: INSTALL=1 DATA=1 CONSTRUCTION=1 PRUNE=1 ./rosetta_cli.sh
