switch node api.hornet-rosetta.testnet.chrysalis2.com

--- a/.github/workflows/rosetta_cli_construction.yml
+++ b/.github/workflows/rosetta_cli_construction.yml
@@ -21,4 +21,4 @@ jobs:
           cd src/utils; cargo build
 
       - name: run rosetta_cli.sh
-        run: INSTALL=1 CONSTRUCTION=1 PRUNE=1 INDEXATION="rosetta-ci" ./rosetta_cli.sh
+        run: INSTALL=1 CONSTRUCTION=1 INDEXATION="rosetta-ci" ./rosetta_cli.sh
