--- a/src/utils/Cargo.toml
+++ b/src/utils/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "utils"
+name = "rosetta-iota-utils"
 version = "0.1.0"
 authors = ["Bernardo A. Rodrigues <bernardo.araujo@iota.org>"]
 edition = "2018"
@@ -19,3 +19,8 @@ reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_repr = "0.1"
+structopt = "0.3"
+
+[[bin]]
+name = "rosetta-iota-utils"
+path = "src/main.rs"
