--- a/src/utils/Cargo.toml
+++ b/src/utils/Cargo.toml
@@ -20,6 +20,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_repr = "0.1"
 structopt = "0.3"
+thiserror = "1.0"
+log = "0.4"
 
 [[bin]]
 name = "rosetta-iota-utils"
