utils snapshot fix unpack

--- a/src/utils/Cargo.toml
+++ b/src/utils/Cargo.toml
@@ -8,14 +8,14 @@ edition = "2018"
 
 [dependencies]
 rand = "0.7"
-tokio = { version = "1.1", features = ["full"] }
+tokio = { version = "1.4", features = ["full"] }
 iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
 hex = "0.4.2"
 dotenv = "0.15.0"
 iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", rev = "8aa41999e88f41c4607451a6f8283bbc69c31d41", features = ["blake2b", "ed25519", "random"] }
-bee-message = { git = "https://github.com/iotaledger/bee.git", rev = "6a3ac5d7475a8f13289da4bdc8c920e4d4b97c04" }
-bee-common = { git = "https://github.com/iotaledger/bee.git", rev = "dev" }
-bee-snapshot = { git = "https://github.com/iotaledger/bee.git", rev = "6a3ac5d7475a8f13289da4bdc8c920e4d4b97c04" }
+bee-message = { git = "https://github.com/iotaledger/bee.git", rev = "89355819bc34c3433ac2613ead44134c51af75f9" }
+bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
+bee-snapshot = { git = "https://github.com/iotaledger/bee.git", rev = "89355819bc34c3433ac2613ead44134c51af75f9" }
 iota-wallet = { git = "https://github.com/iotaledger/wallet.rs", branch = "develop" }
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
