--- a/src/utils/Cargo.toml
+++ b/src/utils/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rosetta-iota-utils"
 version = "0.1.0"
-authors = ["Bernardo A. Rodrigues <bernardo.araujo@iota.org>"]
+authors = ["IOTA Stiftung"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
