--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -16,6 +16,7 @@ iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", rev = "52739220
 bee-message = { git = "https://github.com/iotaledger/bee.git", rev = "89355819bc34c3433ac2613ead44134c51af75f9" }
 bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
 bee-snapshot = { git = "https://github.com/iotaledger/bee.git", rev = "89355819bc34c3433ac2613ead44134c51af75f9" }
+bee-ledger = { git = "https://github.com/iotaledger/bee.git", rev = "89355819bc34c3433ac2613ead44134c51af75f9" }
 iota-wallet = { git = "https://github.com/iotaledger/wallet.rs", branch = "develop" }
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -24,6 +25,7 @@ serde_repr = "0.1"
 structopt = "0.3"
 thiserror = "1.0"
 log = "0.4"
+flume = "0.10"
 
 [[bin]]
 name = "rosetta-iota-utils"
