--- a/.github/workflows/rosetta_cli_data_construction_reconciliation_alphanet.yml
+++ b/.github/workflows/rosetta_cli_data_construction_reconciliation_alphanet.yml
@@ -1,4 +1,4 @@
-name: rosetta_cli.sh check data + reconciliation + construction on a local alphanet
+name: rosetta_cli_testnet.sh check data + reconciliation + construction on a local alphanet
 
 on:
   push:
