--- a/hornet/config_mainnet.json
+++ b/hornet/config_mainnet.json
@@ -48,7 +48,7 @@
     }
   },
   "db": {
-    "engine": "rocksdb",
+    "engine": "pebble",
     "path": "/data/mainnetdb",
     "autoRevalidation": false
   },
