--- a/hornet-conf/config_testnet.json
+++ b/hornet-conf/config_testnet.json
@@ -50,7 +50,7 @@
   },
   "db": {
     "engine": "pebble",
-    "path": "/data/testnetdb",
+    "path": "/data/dbs/testnet",
     "autoRevalidation": false
   },
   "snapshots": {
