--- a/hornet-conf/config_mainnet.json
+++ b/hornet-conf/config_mainnet.json
@@ -49,7 +49,7 @@
   },
   "db": {
     "engine": "pebble",
-    "path": "/data/mainnetdb",
+    "path": "/data/dbs/mainnet",
     "autoRevalidation": false
   },
   "snapshots": {
