reorganize rosetta-cli files

--- a/rosetta-cli-conf/testnet7/config.json
+++ b/rosetta-cli-conf/testnet7/config.json
@@ -4,7 +4,7 @@
     "network": "testnet7"
   },
   "online_url": "http://localhost:3030",
-  "data_directory": ".rosetta-cli-testnet7",
+  "data_directory": ".rosetta-cli-testnet7-db",
   "http_timeout": 10,
   "max_retries": 5,
   "max_sync_concurrency": 32,
@@ -24,7 +24,7 @@
     }
   },
   "construction": {
-    "constructor_dsl_file": "simple_transfer_testnet.ros",
+    "constructor_dsl_file": "simple_transfer.ros",
     "offline_url": "http://localhost:3030",
     "end_conditions": {
       "transfer": 1
