fix mkdir error

--- a/hornet-conf/testnet7/config.json
+++ b/hornet-conf/testnet7/config.json
@@ -50,7 +50,7 @@
   },
   "db": {
     "engine": "pebble",
-    "path": "/data/databases/testnet7/",
+    "path": "/data/testnet7-db",
     "autoRevalidation": false
   },
   "snapshots": {
