--- a/rosetta-cli-conf/chrysalis-mainnet/config.json
+++ b/rosetta-cli-conf/chrysalis-mainnet/config.json
@@ -24,7 +24,7 @@
     }
   },
   "construction": {
-    "constructor_dsl_file": "simple_transfer_testnet.ros",
+    "constructor_dsl_file": "simple_transfer.ros",
     "offline_url": "http://localhost:3030",
     "end_conditions": {
       "transfer": 1
