storage path for hornet db

--- a/hornet-conf/testnet7/config.json
+++ b/hornet-conf/testnet7/config.json
@@ -50,7 +50,7 @@
   },
   "db": {
     "engine": "rocksdb",
-    "path": "/data/testnet7-db",
+    "path": "/data/storage/testnet7",
     "autoRevalidation": false
   },
   "snapshots": {
