--- a/docker-compose.chrysalis-devnet.yml
+++ b/docker-compose.chrysalis-devnet.yml
@@ -14,15 +14,15 @@ services:
       - "127.0.0.1:14265:14265/tcp"
       - "0.0.0.0:15600:15600/tcp"
     volumes:
-      - './hornet-conf/testnet7/config.json:/app/config.json:ro'
-      - './hornet-conf/testnet7/peering.json:/app/peering.json'
+      - './hornet-conf/chrysalis-devnet/config.json:/app/config.json:ro'
+      - './hornet-conf/chrysalis-devnet/peering.json:/app/peering.json'
       - './data:/data'
       - '/etc/ssl/certs:/etc/ssl/certs:ro'
       - '/etc/localtime:/etc/localtime:ro'
 
   rosetta:
     build: .
-    command: --bind-addr 0.0.0.0:3030 --network testnet7 --bech32-hrp atoi --node-url http://hornet:14265 --mode $MODE
+    command: --bind-addr 0.0.0.0:3030 --network chrysalis-devnet --bech32-hrp atoi --node-url http://hornet:14265 --mode $MODE
     restart: "no"
     environment:
       - RUST_LOG=info
