--- a/rosetta-iota-server/Cargo.toml
+++ b/rosetta-iota-server/Cargo.toml
@@ -5,11 +5,11 @@ authors = ["IOTA Stiftung"]
 edition = "2018"
 
 [dependencies]
-bee-common = "0.4"
-bee-message = "0.1"
-bee-rest-api = "0.1"
+bee-common = { version = "0.4.1", default-features = false }
+bee-message = { version  = "0.1.5", default-features = false, features = ["serde"] }
+bee-rest-api = { version = "0.1.3", default-features = false }
 
-iota-client = { git = "https://github.com/iotaledger/iota.rs", rev = "87c95b95d2d6a78a5bc09e1da21744fbbf52fa4c" }
+iota-client = { git = "https://github.com/iotaledger/iota.rs", rev = "1a6ddb3cc95eeaf219b8dd8af72fa834bd5fd79d" }
 iota-crypto = { version = "0.7.0", features = ["std", "blake2b", "ed25519", "random", "slip10", "bip39", "bip39-en"]}
 
 digest = "0.9"
