add dashboard port to docker-compose files

--- a/hornet-conf/chrysalis-devnet/config.json
+++ b/hornet-conf/chrysalis-devnet/config.json
@@ -39,7 +39,7 @@
     }
   },
   "dashboard": {
-    "bindAddress": "localhost:8081",
+    "bindAddress": "0.0.0.0:8081",
     "dev": false,
     "auth": {
       "sessionTimeout": "72h",
