--- a/docker-compose.chrysalis-mainnet.yml
+++ b/docker-compose.chrysalis-mainnet.yml
@@ -5,14 +5,16 @@ services:
     image: gohornet/hornet:1.0.5
     restart: "no"
     working_dir: /app
-    expose:
-      # Node API
-      - "14265"
-      # libp2p/gossip protocol
-      - "15600"
     ports:
+      # node dashboard
+      - "127.0.0.1:8081:8081/tcp"
+      # node REST API
       - "127.0.0.1:14265:14265/tcp"
+      # node gossip protocol
       - "0.0.0.0:15600:15600/tcp"
+    expose:
+      - "14265"
+      - "15600"
     volumes:
       - './hornet-conf/chrysalis-mainnet/config.json:/app/config.json:ro'
       - './hornet-conf/chrysalis-mainnet/peering.json:/app/peering.json'
@@ -26,8 +28,8 @@ services:
     restart: "no"
     environment:
       - RUST_LOG=info
+    ports:
+      - "0.0.0.0:3030:3030/tcp"
     expose:
       # Rosetta API
       - "3030"
-    ports:
-      - "0.0.0.0:3030:3030/tcp"
