--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -4,15 +4,22 @@ on:
   push:
     branches:
       - dev
+      - stable
   pull_request:
     branches:
       - dev
+      - stable
 
 jobs:
   clippy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          override: true
       - run: rustup component add clippy
       - uses: actions-rs/clippy-check@v1
         with:
