--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -4,22 +4,24 @@ on:
   push:
     branches:
       - dev
+      - stable
   pull_request:
     branches:
       - dev
+      - stable
 
 jobs:
   format:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions-rs/toolchain@v1
-      with:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
           profile: minimal
           toolchain: nightly
           override: true
           components: rustfmt
-    - uses: actions-rs/cargo@v1
-      with:
-        command: fmt
-        args: --all -- --check
+      - uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --all -- --check
