--- a/docker-compose.chrysalis-mainnet.yml
+++ b/docker-compose.chrysalis-mainnet.yml
@@ -6,14 +6,11 @@ services:
     restart: "no"
     working_dir: /app
     ports:
-      # node dashboard
-      - "127.0.0.1:8081:8081/tcp"
       # node REST API
       - "127.0.0.1:14265:14265/tcp"
-      # gossip protocol
+      # node gossip protocol
       - "0.0.0.0:15600:15600/tcp"
     expose:
-      - "8081"
       - "14265"
       - "15600"
     volumes:
@@ -30,7 +27,7 @@ services:
     environment:
       - RUST_LOG=info
     ports:
-      - "0.0.0.0:3030:3030/tcp"
+      - "127.0.0.1:3030:3030/tcp"
     expose:
       # Rosetta API
       - "3030"
